tests/baselines/reference/ExportClassWithInaccessibleTypeInIndexerTypeAnnotations.errors.txt
ExportClassWithInaccessibleTypeInIndexerTypeAnnotations.ts(4,9): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
ExportClassWithInaccessibleTypeInIndexerTypeAnnotations.ts(5,9): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.


==== ExportClassWithInaccessibleTypeInIndexerTypeAnnotations.ts (2 errors) ====
    namespace A {
    
        class Point {
            x: number;
            ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
            y: number;
            ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
        }
    
        export class points {
    
            [idx: number]: Point;
            [idx: string]: Point;
        }
    }
    
    